--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -12,4 +12,8 @@
     <None Remove="ro2z0xgr.cop~" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
 </Project>
